GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/missing_op.deca
// Test : syntax_invalid_missing_operator
// But : détecter l’absence d’opérateur entre deux expressions.
// Type d'erreur : erreur syntaxique
// Résultat attendu : erreur de syntaxe.

{
    int a;
    a = 3 4;
}